[package]
name = "pcap_vp9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.1.6", features = ["derive", "env"] }


tokio = { version = "=1.35.1", features = ["full"] }
tokio-util = {version = "=0.7.10", features = ["full"]}

tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
tracing-appender = "=0.2.2"
time = {version = "=0.3.21", features = ["formatting", "macros"]}

futures="=0.3.28"
anyhow = "=1.0.71"
bytes = "=1.1.0"
parking_lot = "=0.11.2"

# libpcap-analyzer ={ git="https://github.com/rusticata/pcap-analyzer.git", rev = "df8aec1" }

libpcap-analyzer ={ git="https://github.com/simon-fu/pcap-analyzer.git", rev = "86023b0", default-features = false, features = ["release"]}
libpcap-tools ={ git="https://github.com/simon-fu/pcap-analyzer.git", rev = "86023b0" }
# libpcap-analyzer = { path="/Users/simon/simon/src/study/pcap-analyzer/libpcap-analyzer", default-features = false, features = ["release"]}
# libpcap-tools = { path="/Users/simon/simon/src/study/pcap-analyzer/libpcap-tools" }

rtp-rs = "=0.6.0"
webrtc = "=0.9.0"
byteorder = "=1.5.0" # 为了测试 IVFFileHeader

# socket2 = "=0.4.10"

# if-addrs = { version = "0.10", features = ["link-local"] }

# pnet = "=0.34.0"
